exports[`require-await-concurrent-subtests > invalid(1): import test from 'node:test';\ntest('t', async t => {\n\tconst other = [];\nconst promises = xs.map(x => t.test(x, () => {}));\nawait Promise.all(other);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', async t => {
  3 | 	const other = [];
  4 | const promises = xs.map(x => t.test(x, () => {}));
  5 | await Promise.all(other);
  6 | });

`;

exports[`require-await-concurrent-subtests > invalid(1): import test from 'node:test';\ntest('t', async t => {\n\tconst other = [];\nconst promises = xs.map(x => t.test(x, () => {}));\nawait Promise.all(other);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', async t => {
  3 | 	const other = [];
> 4 | const promises = xs.map(x => t.test(x, () => {}));
    |                              ^^^^^^^^^^^^^^^^^^^ Subtests created in a \`map()\` callback are not awaited, so the test continues while they run. Use \`await Promise.all(items.map(item => t.test(…)))\`.
  5 | await Promise.all(other);
  6 | });

`;

exports[`require-await-concurrent-subtests > invalid(10): import test from 'node:test';\ntest('t', async t => {\n\t(Promise.all(xs.map(x => t.test(x, () => {}))), undefined);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', async t => {
  3 | 	(Promise.all(xs.map(x => t.test(x, () => {}))), undefined);
  4 | });

`;

exports[`require-await-concurrent-subtests > invalid(10): import test from 'node:test';\ntest('t', async t => {\n\t(Promise.all(xs.map(x => t.test(x, () => {}))), undefined);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', async t => {
> 3 | 	(Promise.all(xs.map(x => t.test(x, () => {}))), undefined);
    | 	                         ^^^^^^^^^^^^^^^^^^^ Subtests created in a \`map()\` callback are not awaited, so the test continues while they run. Use \`await Promise.all(items.map(item => t.test(…)))\`.
  4 | });

`;

exports[`require-await-concurrent-subtests > invalid(11): import test from 'node:test';\ntest('t', async t => {\n\txs.forEach(x => t.test(x, () => {}));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', async t => {
  3 | 	xs.forEach(x => t.test(x, () => {}));
  4 | });

`;

exports[`require-await-concurrent-subtests > invalid(11): import test from 'node:test';\ntest('t', async t => {\n\txs.forEach(x => t.test(x, () => {}));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', async t => {
> 3 | 	xs.forEach(x => t.test(x, () => {}));
    | 	                ^^^^^^^^^^^^^^^^^^^ Subtests created in a \`forEach()\` callback are not awaited, so the test continues while they run. Use \`await Promise.all(items.map(item => t.test(…)))\`.
  4 | });

`;

exports[`require-await-concurrent-subtests > invalid(12): import test from 'node:test';\ntest('t', async t => {\n\txs.forEach(async x => { await t.test(x, () => {}); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', async t => {
  3 | 	xs.forEach(async x => { await t.test(x, () => {}); });
  4 | });

`;

exports[`require-await-concurrent-subtests > invalid(12): import test from 'node:test';\ntest('t', async t => {\n\txs.forEach(async x => { await t.test(x, () => {}); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', async t => {
> 3 | 	xs.forEach(async x => { await t.test(x, () => {}); });
    | 	                              ^^^^^^^^^^^^^^^^^^^ Subtests created in a \`forEach()\` callback are not awaited, so the test continues while they run. Use \`await Promise.all(items.map(item => t.test(…)))\`.
  4 | });

`;

exports[`require-await-concurrent-subtests > invalid(13): import test from 'node:test';\ntest('t', async t => {\n\txs.flatMap(x => t.test(x, () => {}));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', async t => {
  3 | 	xs.flatMap(x => t.test(x, () => {}));
  4 | });

`;

exports[`require-await-concurrent-subtests > invalid(13): import test from 'node:test';\ntest('t', async t => {\n\txs.flatMap(x => t.test(x, () => {}));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', async t => {
> 3 | 	xs.flatMap(x => t.test(x, () => {}));
    | 	                ^^^^^^^^^^^^^^^^^^^ Subtests created in a \`flatMap()\` callback are not awaited, so the test continues while they run. Use \`await Promise.all(items.map(item => t.test(…)))\`.
  4 | });

`;

exports[`require-await-concurrent-subtests > invalid(14): import test from 'node:test';\ntest('t', async t => {\n\tPromise.all(xs.map(x => t.test(x, () => {}))) as Promise<void[]>;\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', async t => {
  3 | 	Promise.all(xs.map(x => t.test(x, () => {}))) as Promise<void[]>;
  4 | });

`;

exports[`require-await-concurrent-subtests > invalid(14): import test from 'node:test';\ntest('t', async t => {\n\tPromise.all(xs.map(x => t.test(x, () => {}))) as Promise<void[]>;\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', async t => {
> 3 | 	Promise.all(xs.map(x => t.test(x, () => {}))) as Promise<void[]>;
    | 	                        ^^^^^^^^^^^^^^^^^^^ Subtests created in a \`map()\` callback are not awaited, so the test continues while they run. Use \`await Promise.all(items.map(item => t.test(…)))\`.
  4 | });

`;

exports[`require-await-concurrent-subtests > invalid(2): import test from 'node:test';\ntest('t', async t => {\n\tconst promises = xs.map(x => t.test(x, () => {}));\n{\n\tconst promises = [];\n\tawait Promise.all(promises);\n}\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', async t => {
  3 | 	const promises = xs.map(x => t.test(x, () => {}));
  4 | {
  5 | 	const promises = [];
  6 | 	await Promise.all(promises);
  7 | }
  8 | });

`;

exports[`require-await-concurrent-subtests > invalid(2): import test from 'node:test';\ntest('t', async t => {\n\tconst promises = xs.map(x => t.test(x, () => {}));\n{\n\tconst promises = [];\n\tawait Promise.all(promises);\n}\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', async t => {
> 3 | 	const promises = xs.map(x => t.test(x, () => {}));
    | 	                             ^^^^^^^^^^^^^^^^^^^ Subtests created in a \`map()\` callback are not awaited, so the test continues while they run. Use \`await Promise.all(items.map(item => t.test(…)))\`.
  4 | {
  5 | 	const promises = [];
  6 | 	await Promise.all(promises);
  7 | }
  8 | });

`;

exports[`require-await-concurrent-subtests > invalid(3): import test from 'node:test';\ntest('t', async t => {\n\tconst promises = xs.map(x => t.test(x, () => {}));\nvoid Promise.all(promises);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', async t => {
  3 | 	const promises = xs.map(x => t.test(x, () => {}));
  4 | void Promise.all(promises);
  5 | });

`;

exports[`require-await-concurrent-subtests > invalid(3): import test from 'node:test';\ntest('t', async t => {\n\tconst promises = xs.map(x => t.test(x, () => {}));\nvoid Promise.all(promises);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', async t => {
> 3 | 	const promises = xs.map(x => t.test(x, () => {}));
    | 	                             ^^^^^^^^^^^^^^^^^^^ Subtests created in a \`map()\` callback are not awaited, so the test continues while they run. Use \`await Promise.all(items.map(item => t.test(…)))\`.
  4 | void Promise.all(promises);
  5 | });

`;

exports[`require-await-concurrent-subtests > invalid(4): import test from 'node:test';\ntest('t', async t => {\n\txs.map(x => t.test(x, () => {}));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', async t => {
  3 | 	xs.map(x => t.test(x, () => {}));
  4 | });

`;

exports[`require-await-concurrent-subtests > invalid(4): import test from 'node:test';\ntest('t', async t => {\n\txs.map(x => t.test(x, () => {}));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', async t => {
> 3 | 	xs.map(x => t.test(x, () => {}));
    | 	            ^^^^^^^^^^^^^^^^^^^ Subtests created in a \`map()\` callback are not awaited, so the test continues while they run. Use \`await Promise.all(items.map(item => t.test(…)))\`.
  4 | });

`;

exports[`require-await-concurrent-subtests > invalid(5): import test from 'node:test';\ntest('t', async t => {\n\txs.map(x => { return t.test(x, () => {}); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', async t => {
  3 | 	xs.map(x => { return t.test(x, () => {}); });
  4 | });

`;

exports[`require-await-concurrent-subtests > invalid(5): import test from 'node:test';\ntest('t', async t => {\n\txs.map(x => { return t.test(x, () => {}); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', async t => {
> 3 | 	xs.map(x => { return t.test(x, () => {}); });
    | 	                     ^^^^^^^^^^^^^^^^^^^ Subtests created in a \`map()\` callback are not awaited, so the test continues while they run. Use \`await Promise.all(items.map(item => t.test(…)))\`.
  4 | });

`;

exports[`require-await-concurrent-subtests > invalid(6): import test from 'node:test';\ntest('t', async t => {\n\tawait xs.map(x => t.test(x, () => {}));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', async t => {
  3 | 	await xs.map(x => t.test(x, () => {}));
  4 | });

`;

exports[`require-await-concurrent-subtests > invalid(6): import test from 'node:test';\ntest('t', async t => {\n\tawait xs.map(x => t.test(x, () => {}));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', async t => {
> 3 | 	await xs.map(x => t.test(x, () => {}));
    | 	                  ^^^^^^^^^^^^^^^^^^^ Subtests created in a \`map()\` callback are not awaited, so the test continues while they run. Use \`await Promise.all(items.map(item => t.test(…)))\`.
  4 | });

`;

exports[`require-await-concurrent-subtests > invalid(7): import test from 'node:test';\ntest('t', async t => {\n\tPromise.all(xs.map(x => t.test(x, () => {})));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', async t => {
  3 | 	Promise.all(xs.map(x => t.test(x, () => {})));
  4 | });

`;

exports[`require-await-concurrent-subtests > invalid(7): import test from 'node:test';\ntest('t', async t => {\n\tPromise.all(xs.map(x => t.test(x, () => {})));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', async t => {
> 3 | 	Promise.all(xs.map(x => t.test(x, () => {})));
    | 	                        ^^^^^^^^^^^^^^^^^^^ Subtests created in a \`map()\` callback are not awaited, so the test continues while they run. Use \`await Promise.all(items.map(item => t.test(…)))\`.
  4 | });

`;

exports[`require-await-concurrent-subtests > invalid(8): import test from 'node:test';\ntest('t', async t => {\n\tvoid Promise.all(xs.map(x => t.test(x, () => {})));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', async t => {
  3 | 	void Promise.all(xs.map(x => t.test(x, () => {})));
  4 | });

`;

exports[`require-await-concurrent-subtests > invalid(8): import test from 'node:test';\ntest('t', async t => {\n\tvoid Promise.all(xs.map(x => t.test(x, () => {})));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', async t => {
> 3 | 	void Promise.all(xs.map(x => t.test(x, () => {})));
    | 	                             ^^^^^^^^^^^^^^^^^^^ Subtests created in a \`map()\` callback are not awaited, so the test continues while they run. Use \`await Promise.all(items.map(item => t.test(…)))\`.
  4 | });

`;

exports[`require-await-concurrent-subtests > invalid(9): import test from 'node:test';\ntest('t', async t => {\n\tcondition && Promise.all(xs.map(x => t.test(x, () => {})));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', async t => {
  3 | 	condition && Promise.all(xs.map(x => t.test(x, () => {})));
  4 | });

`;

exports[`require-await-concurrent-subtests > invalid(9): import test from 'node:test';\ntest('t', async t => {\n\tcondition && Promise.all(xs.map(x => t.test(x, () => {})));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', async t => {
> 3 | 	condition && Promise.all(xs.map(x => t.test(x, () => {})));
    | 	                                     ^^^^^^^^^^^^^^^^^^^ Subtests created in a \`map()\` callback are not awaited, so the test continues while they run. Use \`await Promise.all(items.map(item => t.test(…)))\`.
  4 | });

`;
